[mactts] Deprecations (#20825)
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>